<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AddFragment"
    android:background="@color/white_grey"
    android:id="@+id/fragment_add">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_margin="42dp"
        app:cardCornerRadius="16dp"
        android:id="@+id/cardview">
        <ImageView

            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_add_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"/>
        <TextView
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <EditText
        android:textColor="@color/black"
        android:id="@+id/edit_title"
        android:textColorHint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/title"
        android:padding="12dp"
        android:layout_marginHorizontal="40dp"
        />

    <EditText
        android:id="@+id/edit_desc"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/description"
        android:padding="12dp"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        />

    <EditText
        android:id="@+id/edit_date"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/date"
        android:textColorHint="@color/black"
        android:padding="12dp"
        android:layout_marginHorizontal="40dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_btn"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:padding="12dp"
        app:cornerRadius="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="40dp"
        android:text="@string/add"
        />

</androidx.appcompat.widget.LinearLayoutCompat>